# wows-renderer

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  TRAPS-renderer.md  docker-compose.yml  map_design_guideline.md  profile_frames.py  pyproject.toml  render_dual.py  render_quick.py  test_render.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  regression.yml
.github/workflows/: canary.yml  ci.yml  docker.yml
bot/: cog_render.py  config.py  main.py  worker.py
renderer/: __init__.py  assets.py  build_export.py  config.py  core.py  frame_dump.py  game_state.py  gamedata_cache.py  gamedata_resolver.py  gameparams.py  video.py
renderer/layers/: aircraft.py  base.py  capture_points.py  consumables.py  damage_stats.py  health_bars.py  hud.py  killfeed.py  map_bg.py  player_header.py  projectiles.py  ribbons.py  right_panel.py  ships.py  smoke.py  team_roster.py  trails.py  weather.py
scripts/: decode_gameparams.py
tests/: conftest.py  golden_image.py  test_golden_images.py  test_smoke.py
tests/fixtures/: README.md
tests/golden_images/: README.md
