[project]
name = "wows-minimap-renderer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "wows-replay-parser",
    "pycairo>=1.26",
    "cairosvg>=2.7",
    "discord.py>=2.3",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
wows-render = "renderer.cli:main"
wows-bot = "bot.main:main"

[tool.uv.sources]
# Public git source. For local dev against a side-by-side checkout, run:
#   uv pip install -e ../wows-replay-parser
# after the initial `uv sync`.
wows-replay-parser = { git = "https://github.com/toalba/wows-replay-parser.git", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["renderer", "bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
