[project]
name = "wows-minimap-renderer"
version = "0.1.0"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "wows-replay-parser>=0.1.1",
    "pycairo>=1.26",
    "cairosvg>=2.7",
    "discord.py>=2.7.1",
    "click>=8.0",
    "rich>=15.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "mypy>=1.10",
    "pytest>=9.0.3",
    "Pillow>=10",
]

[project.scripts]
wows-render = "renderer.cli:main"
wows-bot = "bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["renderer", "bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = [
    "TC001",  # typing-only first-party import
    "TC002",  # typing-only third-party import (cairo is used at runtime)
    "TC003",  # typing-only stdlib import
    "N806",   # non-lowercase local
    "SIM102", # collapsible if
    "SIM103", # needless bool
    "SIM105", # contextlib.suppress over try/except/pass
    "SIM108", # ternary over if/else
    "SIM114", # combine if branches with or
    "SIM202", # negate != op
    "B007",   # unused loop control
    "B019",   # cached_property on instance methods
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "cairo",
    "cairo.*",
    "cairosvg",
    "cairosvg.*",
    "discord",
    "discord.*",
    "click",
    "click.*",
    "rich",
    "rich.*",
]
ignore_missing_imports = true
